force-app/main/default/src/objects/PJN_Coverage_Benefit__c/PJN_Coverage_Benefit__c.object-meta.xml
<CustomObject>
    <description>Custom object to substitute standard CoverageBenefit object so we can connect custom object PJN_Member_Plan object.</description>
    <label>Coverage Benefit</label>
    <nameField>
        <displayFormat>CB-{00000}</displayFormat>
        <label>Coverage Benefit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coverage Benefits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>