force-app/main/default/src/objects/PJN_Coverage_Benefit__c/fields/MVN_Additional_Benefit_Information__c.field-meta.xml
<CustomField>
    <fullName>MVN_Additional_Benefit_Information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Benefit Information</label>
    <type>TextArea</type>
</CustomField>