force-app/main/default/src/objects/PJN_Coverage_Benefit__c/fields/MVN_Call_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>MVN_Call_Reference_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>