force-app/main/default/src/objects/PJN_Coverage_Benefit__c/fields/MVN_Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>MVN_Care_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Plan</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Coverage Benefits</relationshipLabel>
    <relationshipName>Coverage_Benefits</relationshipName>
    <type>Lookup</type>
</CustomField>