force-app/main/default/src/objects/PJN_Coverage_Benefit__c/fields/MVN_Deductible_Met__c.field-meta.xml
<CustomField>
    <fullName>MVN_Deductible_Met__c</fullName>
    <label>Deductible Met</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>