force-app/main/default/src/objects/PJN_Coverage_Benefit__c/fields/MVN_Drug_Copay_Coinsurance__c.field-meta.xml
<CustomField>
    <fullName>MVN_Drug_Copay_Coinsurance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter % or $ amount.</inlineHelpText>
    <label>Drug Copay/Coinsurance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>