force-app/main/default/src/objects/PJN_Coverage_Benefit__c/fields/MVN_Lifetime_Max__c.field-meta.xml
<CustomField>
    <fullName>MVN_Lifetime_Max__c</fullName>
    <label>Lifetime Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>