force-app/main/default/src/objects/PJN_Coverage_Benefit__c/fields/MVN_OOP_Deductible__c.field-meta.xml
<CustomField>
    <fullName>MVN_OOP_Deductible__c</fullName>
    <label>OOP - Deductible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Includes Deductible</fullName>
            </value>
            <value>
                <fullName>Excludes Deductible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>