force-app/main/default/src/objects/PJN_Coverage_Benefit__c/fields/MVN_Outcome__c.field-meta.xml
<CustomField>
    <fullName>MVN_Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Covered</fullName>
            </value>
            <value>
                <fullName>Not Covered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>