force-app/main/default/src/objects/PJN_Coverage_Benefit__c/fields/MVN_PA_Attention_To__c.field-meta.xml
<CustomField>
    <fullName>MVN_PA_Attention_To__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PA Attention To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>