force-app/main/default/src/objects/PJN_Coverage_Benefit__c/fields/MVN_PA_Phone__c.field-meta.xml
<CustomField>
    <fullName>MVN_PA_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PA Phone</label>
    <type>Phone</type>
</CustomField>