force-app/main/default/src/objects/PJN_Coverage_Benefit__c/fields/MVN_PA_Required_Criteria__c.field-meta.xml
<CustomField>
    <fullName>MVN_PA_Required_Criteria__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PA Required Criteria</label>
    <type>TextArea</type>
</CustomField>