force-app/main/default/src/objects/PJN_Coverage_Benefit__c/fields/MVN_Pharmacy_Cap__c.field-meta.xml
<CustomField>
    <fullName>MVN_Pharmacy_Cap__c</fullName>
    <label>Pharmacy Cap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>