force-app/main/default/src/objects/PJN_Coverage_Benefit__c/fields/MVN_Product_Covered__c.field-meta.xml
<CustomField>
    <fullName>MVN_Product_Covered__c</fullName>
    <label>Product Covered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>