force-app/main/default/src/objects/PJN_Coverage_Benefit__c/fields/PA_Estimated_Decision_Time__c.field-meta.xml
<CustomField>
    <fullName>PA_Estimated_Decision_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PA Estimated Decision Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>