force-app/main/default/src/objects/PJN_Coverage_Benefit__c/fields/PJN_Copay__c.field-meta.xml
<CustomField>
    <fullName>PJN_Copay__c</fullName>
    <description>Currency field for the Copay amount.</description>
    <label>Copay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>