force-app/main/default/src/objects/PJN_Coverage_Benefit__c/fields/PJN_Deductible__c.field-meta.xml
<CustomField>
    <fullName>PJN_Deductible__c</fullName>
    <description>Currency field for deductible amount.</description>
    <label>Deductible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>