force-app/main/default/src/objects/PJN_Coverage_Benefit__c/fields/PJN_Member_Plan__c.field-meta.xml
<CustomField>
    <fullName>PJN_Member_Plan__c</fullName>
    <description>Master Detail relationship between Member Plan and Coverage Benefits.</description>
    <label>Member Plan</label>
    <referenceTo>PJN_Member_Plan__c</referenceTo>
    <relationshipLabel>Coverage Benefits</relationshipLabel>
    <relationshipName>PJN_Coverage_Benefits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>