force-app/main/default/src/objects/PJN_Coverage_Benefit__c/fields/PJN_Out_of_Pocket_Amount__c.field-meta.xml
<CustomField>
    <fullName>PJN_Out_of_Pocket_Amount__c</fullName>
    <description>Currency field for Out of Pocket Amount.</description>
    <label>Out of Pocket Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>