force-app/main/default/src/objects/PJN_Coverage_Benefit__c/fields/PJN_PA_Required__c.field-meta.xml
<CustomField>
    <fullName>PJN_PA_Required__c</fullName>
    <description>Picklist ( Yes/No) for PA Required.</description>
    <label>PA Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>