force-app/main/default/src/objects/PJN_Coverage_Benefit__c/fields/PJN_Paid__c.field-meta.xml
<CustomField>
    <fullName>PJN_Paid__c</fullName>
    <description>Currency field for amount paid.</description>
    <label>Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>