force-app/main/default/src/objects/PJN_Coverage_Benefit__c/recordTypes/MVN_Home_Infusion_Administration.recordType-meta.xml
<RecordType>
    <fullName>MVN_Home_Infusion_Administration</fullName>
    <active>true</active>
    <description>Home infusion administration benefit.</description>
    <label>Home Infusion Administration</label>
</RecordType>