force-app/main/default/src/objects/PJN_Coverage_Benefit__c/recordTypes/MVN_Infusion_Administration.recordType-meta.xml
<RecordType>
    <fullName>MVN_Infusion_Administration</fullName>
    <active>true</active>
    <description>Infusion administration benefit.</description>
    <label>Infusion Administration</label>
</RecordType>