force-app/main/default/src/objects/PJN_Coverage_Benefit__c/recordTypes/MVN_Physician_Purchase_Medical.recordType-meta.xml
<RecordType>
    <fullName>MVN_Physician_Purchase_Medical</fullName>
    <active>true</active>
    <description>Physician purchase option through major medical benefits.</description>
    <label>Buy &amp; Bill - Medical</label>
</RecordType>