force-app/main/default/src/objects/PJN_Coverage_Benefit__c/recordTypes/MVN_SP_Medical.recordType-meta.xml
<RecordType>
    <fullName>MVN_SP_Medical</fullName>
    <active>true</active>
    <description>Specialty pharmacy option through major medical benefit.</description>
    <label>SP - Medical</label>
</RecordType>