force-app/main/default/src/objects/PJN_Coverage_Benefit__c/recordTypes/MVN_SP_Prescription_Drug.recordType-meta.xml
<RecordType>
    <fullName>MVN_SP_Prescription_Drug</fullName>
    <active>true</active>
    <description>Specialty pharmacy option through prescription drug benefit.</description>
    <label>SP - Prescription Drug</label>
</RecordType>