force-app/main/default/src/objects/PJN_Coverage_Benefit__c/validationRules/CopayCoinsuranceFieldCharacterCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>CopayCoinsuranceFieldCharacterCheck</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( MVN_Drug_Copay_Coinsurance__c ,&quot;^\\$?\\d*%?$&quot;))</errorConditionFormula>
    <errorDisplayField>MVN_Drug_Copay_Coinsurance__c</errorDisplayField>
    <errorMessage>Copay/Coinsurance may only contain 0-9, %, or $ characters</errorMessage>
</ValidationRule>